--- a/layout.css
+++ b/layout.css
@@ -18,3 +18,10 @@ html, body {
     width: 100%;
     background-color: darkgray;
 }
+
+#new_feed{
+    width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: cyan;
+}
