--- a/layout.css
+++ b/layout.css
@@ -19,6 +19,18 @@ html, body {
     background-color: darkgray;
 }
 
+.secondary.menu {
+    position: relative;
+}
+
+.profile-picture {
+    position: absolute;
+    width: 300px;
+    height: 300px;
+    background-color: black;
+    transform: translate(50%, -50%);
+}
+
 #new_feed{
     width: 500px;
     margin-left: auto;
